# handsignverify

./: README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
dumparea/: pyvenv.cfg
dumparea/Scripts/: activate  activate.bat
handsignverify/: __init__.py  handsignverify.py  version.py
handsignverify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
handsignverify/images/: temp.py
handsignverify/models/: finalized_model_class.sav  model_VGG_ADAM.json
src/handsignverify/: model.py
